Test/dafny0/ConstantErrors.dfy.expect
ConstantErrors.dfy(5,8): Error: type for constant 'two' is 'int', but its initialization value type is 'real'
ConstantErrors.dfy(12,8): Error: const definition contains a cycle: five -> six -> five
ConstantErrors.dfy(21,6): Error: 'this' is not allowed in a 'static' context
ConstantErrors.dfy(32,6): Error: a ghost const field is allowed only in specification contexts
ConstantErrors.dfy(33,6): Error: a ghost const field is allowed only in specification contexts
ConstantErrors.dfy(44,7): Error: RHS (of type int) not assignable to LHS (of type SmallInt)
ConstantErrors.dfy(67,10): Error: const field 'x0' is inherited from trait 'Trait' and is not allowed to be re-declared
ConstantErrors.dfy(68,10): Error: const field 'x1' is inherited from trait 'Trait' and is not allowed to be re-declared
ConstantErrors.dfy(69,10): Error: const field 'x2' is inherited from trait 'Trait' and is not allowed to be re-declared
ConstantErrors.dfy(70,10): Error: const field 'x3' is inherited from trait 'Trait' and is not allowed to be re-declared
ConstantErrors.dfy(97,6): Error: LHS of assignment must denote a mutable field
ConstantErrors.dfy(99,6): Error: LHS of assignment must denote a mutable field
ConstantErrors.dfy(101,6): Error: LHS of assignment must denote a mutable field
ConstantErrors.dfy(101,10): Error: LHS of assignment must denote a mutable field
ConstantErrors.dfy(101,14): Error: LHS of assignment must denote a mutable field
ConstantErrors.dfy(101,18): Error: LHS of assignment must denote a mutable field
ConstantErrors.dfy(109,8): Error: const definition contains a cycle: a -> c -> b -> a
ConstantErrors.dfy(115,14): Error: const definition contains a cycle: x -> H -> x
ConstantErrors.dfy(119,14): Error: const definition contains a cycle: x' -> H' -> x'
ConstantErrors.dfy(123,8): Error: recursive dependency involving constant initialization: ur -> ur
ConstantErrors.dfy(127,10): Error: recursive constraint dependency involving a newtype: A -> F -> A
ConstantErrors.dfy(136,10): Error: recursive constraint dependency involving a newtype: A -> F -> B -> A
ConstantErrors.dfy(146,10): Error: recursive constraint dependency involving a newtype: A -> F -> B -> A
ConstantErrors.dfy(156,10): Error: recursive constraint dependency involving a newtype: A -> F -> B -> A
ConstantErrors.dfy(166,10): Error: recursive constraint dependency involving a newtype: A -> F -> B -> C -> A
ConstantErrors.dfy(180,10): Error: recursive constraint dependency involving a newtype: A -> b -> MakeC -> C -> D -> E -> f -> G -> H -> I -> j -> K -> L -> M -> n -> MakeA -> A
ConstantErrors.dfy(207,7): Error: cycle among redirecting types (newtypes, subset types, type synonyms): A -> B -> C -> D -> A
ConstantErrors.dfy(215,8): Error: static non-ghost const field 'g' of type 'G' (which does not have a default compiled value) must give a defining value
ConstantErrors.dfy[R0](220,8): Error: static non-ghost const field 'g' of type 'G' (which does not have a default compiled value) must give a defining value
ConstantErrors.dfy(256,10): Error: a const declaration (a) in a refining class (MyClass) must replace a const in the refinement base
ConstantErrors.dfy(257,8): Error: a field declaration (b) in a refining class (MyClass) must replace a field in the refinement base
ConstantErrors.dfy(258,10): Error: a const in a refining module cannot be changed from static to non-static or vice versa: u
ConstantErrors.dfy(259,17): Error: a const in a refining module cannot be changed from static to non-static or vice versa: v
ConstantErrors.dfy(263,8): Error: the type of a const declaration (l) in a refining class (_default) must be syntactically the same as for the const being refined
ConstantErrors.dfy(264,8): Error: a const re-declaration (m) can give an initializing expression only if the const in the refinement base does not
ConstantErrors.dfy(266,8): Error: a const re-declaration (y) must be to ghostify the const
ConstantErrors.dfy(267,8): Error: type for constant 'z' is 'int', but its initialization value type is 'real'
ConstantErrors.dfy(282,6): Error: LHS of assignment must denote a mutable field
ConstantErrors.dfy(275,7): Error: variable 'x' occurs more than once as left-hand side of :|
39 resolution/type errors detected in ConstantErrors.dfy
